  * dh,Buildsytems: Accept "--no-parallel" to disable
    parallel builds.  It is effectively the same as using
    --max-parallel=1 but may be more intuative to some people.
  * dh_makeshlibs: Use a noawait trigger to invoke ldconfig
    rather maintscripts.
  * dh_installdirs.1: Add a note that many packages will work
    fine without calling dh_installdirs.  (Closes: #748993)

  [ Paul Tagliamonte ]
  * dh_gencontrol: Put debug debs back in the "debug" section.
  * dh_strip/dh_gencontrol: Add a space separated list of
    build-ids in the control file of packages containing
    deattached debug symbols.

  [ Andrew Ayer ]
  * d/control: Depend on dh-strip-nondeterminism
  * dh: Call dh_strip_nondeterminism during build.
    (Closes: #759895)

  [ Colin Watson ]
  * Buildsystem.pm: Fix doit_in_sourcedir/doit_in_builddir to
    always chdir back to the original directory even if the
    subprocess exits non-zero.  (Closes: #798116)

 -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200

debhelper (9.20150811) unstable; urgency=medium

  * d/changelog: Add missing entry for dh_md5sums/#786695 in
    the 9.20150628 release.
  * Makefile: Set LC_ALL=C when sorting.
  * dh: Avoid passing --parallel to other debhelper commands
    if it is the only option and "parallel" is not set (or
    set to 1) in DEB_BUILD_OPTIONS.
  * dh_strip: Apply patch from Guillem Jover to fix a typo.
    (Closes: #792207)
  * dh_makeshlibs: Avoid an uninitialised warning in some
    error cases.  Thanks to Jakub Wilk for reporting it.
    (Closes: #793092)
  * Dh_Lib.pm: Apply patch from Guillem Jover to use the
    value of dpkg-architecture variables from the environment,
    if present.  (Closes: #793440)
  * Dh_Buildsystems.pm/Dh_Lib.pm: Import Exporter's import
    subroutine rather than adding Exporter to @ISA.
  * Dh_Lib.pm: Use Dpkg::Arch's debarch_is rather than running
    dpkg-architecture to determine if an architecture matches