@@ -62,6 +62,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     rather maintscripts.
   * dh_installdirs.1: Add a note that many packages will work
     fine without calling dh_installdirs.  (Closes: #748993)
+  * dh_compress: Apply patch from Rafael Kitover to support
+    passing files to dh_compress that would have been
+    compressed anyway.  (Closes: #794898)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
